feat: production readiness with testing and CI/CD
- PostgreSQL configuration with Flyway migrations
- Rate limiting using Bucket4j (5 requests/min per IP)
- Authentication monitoring with Micrometer Prometheus
- Docker support with multi-stage build
- GitHub Actions CI/CD workflows
  - CI: automated testing, code coverage, security scanning
  - CD: deployment workflow with database migrations
- Production deployment documentation (PRODUCTION.md)
- Docker Compose setup for local development (PostgreSQL, Prometheus, Grafana)
- Maven plugins: JaCoCo, SpotBugs, Checkstyle, OWASP Dependency Check
- Test suite with Spring Boot integration test
- Updated README with testing and deployment instructions

Infrastructure improvements:
- Environment-based configuration (dev/prod profiles)
- Secured actuator endpoints
- Health checks and monitoring endpoints
- SSL/HTTPS support in production config
- Comprehensive deployment guide

Quality assurance:
- 60% minimum code coverage requirement
- Automated security vulnerability scanning
- Code style and quality checks
- Continuous integration on all branches

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,17 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 
+# CORS Configuration (Development - allows localhost)
+# For production, set CORS_ALLOWED_ORIGINS environment variable
+cors.allowed-origins=http://localhost:3000,http://localhost:8080,http://127.0.0.1:3000,https://*.app.github.dev
+
+# Flyway Configuration (disabled for H2 development)
+spring.flyway.enabled=false
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=always
+
 # Logging
 logging.level.com.acme.auth=DEBUG
 logging.level.org.springframework.security=DEBUG
